# istaroth

./: .env.common.example  .env.mcp.example  .env.web.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.mcp  MCP.md  QUESTIONS.md  README.md  TODO.md  alembic.ini  backend.md  conductor.json  paseo.json  pyproject.toml  requirements-app.in  requirements-app.txt  requirements-dev.in  requirements-ml.in  requirements-ml.txt  requirements.in  requirements.txt
.beads/: issues.jsonl
.claude/agents/: genshin-lore-expert.md
.claude/commands/: commit.md  genshin.md
.conductor/: settings.toml
.cursor/: hooks.json  worktrees.json
.cursor/hooks/: dev-compose-down.sh
.cursor/rules/: docker-dev.mdc
.github/workflows/: build-checkpoint.yml  docker-build.yml  frontend.yml  mypy.yml  rust.yml  test.yml
dev-prompts/: deobfuscate.txt
docker-compose/web/: .gitignore  docker-compose.yml  env.docker-compose.example  nginx.conf
examples/: QUESTIONS.md  answer_cataclysm_2.md  answer_maryann_1.md  answer_nail_1.md
examples/chs/: QUESTIONS.md  answer_cataclysm_1.md  answer_cataclysm_3.md  answer_enjou_1.md  answer_rowboat_1.md  answer_saiguu_1.md  answer_scaramouche_1.md  answer_signora_1.md  answer_vourukasha_1.md
examples/eng/: QUESTIONS.md  answer_maryann_1.md
frontend/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  eslint.config.js  generate-types.js  index.html  nginx.conf  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ConsultationLayout.tsx  ConversationLayout.tsx  ConversationPage.module.css  ConversationPage.tsx  CoopHierarchyPage.tsx  HierarchyPage.tsx  HistoryPage.tsx  LibraryCategoriesPage.tsx  LibraryEntry.module.css  LibraryEntry.tsx  LibraryFileViewer.module.css  LibraryFileViewer.tsx  LibraryFilesPage.tsx  LibraryIndex.module.css  LibraryIndex.tsx  LibraryLayout.module.css  LibraryLayout.tsx  LibraryPage.tsx  NotFoundPage.tsx  QueryForm.module.css  QueryForm.tsx  QueryPage.module.css  QueryPage.tsx  QuestHierarchyPage.tsx  RetrievePage.module.css  RetrievePage.tsx  RootLayout.module.css  ShortURLRedirect.tsx  actions.module.css  index.css
helm/istaroth/: Chart.yaml  README.md  values.yaml
istaroth/: caching.py  json_utils.py  langsmith_utils.py  llm_errors.py  llm_manager.py  logging_utils.py  otel_utils.py  shared_prompts.py  text_cleanup.py  transcribe.py  utils.py
istaroth/agd/: __init__.py  agd_types.py  coop_graph.py  coop_hierarchy.py  deobfuscation.py  first_seen.py  hierarchy_nav.py  id_types.py  issues.py  localization.py  processed_types.py  processing.py  quest_hierarchy.py  renderable_types.py  rendering.py  repo.py  talk_parsing.py  text_utils.py  tracking.py  types.py
istaroth/backend/: CLAUDE.md  app.py  config.py  database.py  db_models.py  dependencies.py  models.py  utils.py
istaroth/mcp/: __init__.py
istaroth/rag/: __init__.py  budget.py  document_store.py  document_store_set.py  embedding.py  embedding_cache.py  embeddings.py  output_rendering.py  pipeline.py  progress.py  prompt_set.py  query_normalize.py  query_transform.py  remote_embeddings.py  rerank.py  retrieval_client.py  retrieval_diff.py  text_set.py  tracing.py  types.py  vector_store.py
istaroth/reasoning/: __init__.py  pipeline.py  prompts.py  tools.py  types.py
istaroth/services/: __init__.py
istaroth/text/: __init__.py  manifest.py  proper_noun_extraction.py  proper_nouns.py  types.py
istaroth/tps/: __init__.py
istorath/agd/: __init__.py  processing.py  renderable_types.py  rendering.py  repo.py  types.py
istorath/mcp/: __init__.py  server.py
istorath/rag/: __init__.py  embedding.py  pipeline.py  tracing.py
migrations/: env.py
migrations/versions/: 2f38dc0b3c84_add_query_generation_stats.py  3c2d29b727da_add_budget_column_to_conversations.py  51e030967e15_add_generation_time_tracking.py  (+9 more)
plans/: 00000000-todos.md  20251129-library-browse-mode.md
rust/: Cargo.toml
rust/istaroth-agd-regen/: Cargo.toml  README.md
rust/istaroth-agd-regen/src/: cleanup.rs  coop.rs  deob.rs  firstseen.rs  firstseen_build.rs  generate.rs  git.rs  hierarchy.rs  issues.rs  lang.rs  lib.rs  main.rs  pyset.rs  render_groups.rs  render_misc.rs  render_quest.rs  renderables.rs  rendered_item.rs  repo.rs  stats.rs  talk.rs  talkparse.rs  textmap.rs  util.rs  vh.rs
rust/istaroth-agd-regen/src/renderables/: achievement.rs  activity.rs  anecdote.rs  artifact.rs  blossom.rs  book.rs  character.rs  creature.rs  hangout.rs  material.rs  quest.rs  readable.rs  subtitle.rs  talk.rs  talk_group.rs  weapon.rs
rust/istaroth-agd-regen/tests/: agd_integration.rs  contract.rs  corpus_sanity.rs
scripts/: agd_build_first_seen.py  agd_tools.py  build_checkpoint.sh  build_first_seen.py  build_push_docker.sh  checkpoint_tools.py  dev-compose.sh  docker-entrypoint.sh  generate.py  generate_openapi.py  langsmith_tools.py  list_quest_text.py  list_readable_metadata.py  llamacloud_query.py  llamacloud_upload.py  mcp_server.py  mcp_wrapper.sh  mcp_wrapper.template.sh  package_checkpoint.sh  rag_tools.py  reason.py  release_checkpoint.py  render.py  run_backend.py  test_embedding.py  tps_shishu_tools.py  transcribe.py  verify_text_naming.py
tests/: __init__.py  conftest.py  test_budget.py  test_caching.py  test_coop.py  test_deobfuscation.py  test_document_store.py  test_embedding_cache.py  test_embeddings.py  test_first_seen.py  test_hierarchy_nav.py  test_intent_classification.py  test_library_parsing.py  test_library_retrieve.py  test_llm_manager.py  test_manifest.py  test_mcp_server_integration.py  test_otel_utils.py  test_output_rendering.py  test_pipeline_streaming.py  test_processing.py  test_query_normalize.py  test_quest_hierarchy.py  test_rag_tools_integration.py  test_rag_types.py  test_remote_embeddings.py  test_rendering.py  test_repo.py  test_retrieval_fixtures.py  test_schema_contract.py  test_talk_parsing.py  test_text_cleanup.py  test_text_corpus_sanity.py  test_text_set.py  test_text_utils.py  test_tracking.py
(+210 files in other folders)
