[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "istaroth"
version = "0.1.0"
description = "Pipeline for extracting, cleaning, and structuring textual content from Genshin Impact for RAG"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "aiosqlite",
    "alembic",
    "asyncpg",
    "attrs",
    "chromadb",
    "click",
    "fastapi",
    "fastmcp",
    "greenlet",
    "httpx",
    "jieba",
    "langchain",
    "langchain-cohere",
    "langchain-community",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface",
    "langchain-openai",
    "marker-pdf",
    "mcp",
    "openai",
    "prometheus-client",
    "psycopg2-binary",
    "pydantic",
    "rank-bm25",
    "sqlalchemy[asyncio]",
    "tabulate",
    "tqdm",
    "uvicorn[standard]",
]

[dependency-groups]
ml = [
    "faiss-cpu",
    "huggingface-hub",
    "numpy",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "tokenizers",
    "torch",
    "transformers",
]
dev = [
    {include-group = "ml"},
    "memray>=1.19.1",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "types-tabulate",
    "types-tqdm",
]

[tool.setuptools.packages.find]
include = ["istaroth*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
files = ["istaroth", "scripts", "tests"]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
