[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "istaroth"
version = "0.1.0"
description = "Pipeline for extracting, cleaning, and structuring textual content from Genshin Impact for RAG"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "aiosqlite",
    "alembic",
    "anyio>=4.12.1",
    "asyncpg",
    "attrs",
    "chromadb",
    "click",
    "fastapi",
    "fastmcp",
    "greenlet",
    "httpx",
    "jieba",
    "langchain",
    "langchain-cohere",
    "langchain-community",
    "langchain-google-genai>=3.1.0",
    "langchain-huggingface",
    "langchain-openai",
    "langgraph>=1.0.9",
    "mcp",
    "openai",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-sdk",
    "prometheus-client",
    "psycopg2-binary",
    "pydantic",
    "pypinyin>=0.55.0",
    "rank-bm25",
    "sqlalchemy[asyncio]",
    "tabulate",
    "tqdm",
    "uvicorn[standard]",
]

[dependency-groups]
ml = [
    "faiss-cpu",
    "huggingface-hub",
    "numpy",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "tokenizers",
    "torch",
    "transformers",
]
dev = [
    {include-group = "ml"},
    "langchain-ollama>=1.1.0",
    "memray>=1.19.1",
    "mypy",
    "pre-commit",
    "py-spy>=0.4.1",
    "pytest",
    "pytest-asyncio",
    "types-tabulate",
    "types-tqdm",
]

[tool.uv]
constraint-dependencies = ["torch==2.10.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.setuptools.packages.find]
include = ["istaroth*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "llm: opt-in tests that call a real model (cost tokens); run with --run-llm",
]

[tool.mypy]
python_version = "3.12"
files = ["istaroth", "scripts", "tests"]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
