[package]
name = "istaroth-agd-regen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
mimalloc = "0.1.52"
rayon = "1"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2"
