[package]
name = "istaroth-agd-regen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mimalloc = "0.1.52"
rayon = "1"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
